# Scaruffi

./: Pipfile  README.md  __main__.py  setup.cfg
scaruffi/: api.py  tests.py
