[metadata]
name = scaruffi
version = 0.0.2
description = Get some data from scaruffi.com.
long_description = file: README.md
license = MIT
author = dece
author-email = shgck@pistache.land
home-page = https://github.com/Dece/Scaruffi
classifiers =
  Environment :: Console
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
packages = scaruffi
python_requires = >= 3.7
setup_requires = setuptools >= 38.3.0
install_requires =
  requests~=2.24
  beautifulsoup4~=4.9
  html5lib~=1.1

[options.entry_points]
console_scripts =
  scaruffi = scaruffi.__main__:main
